   > MDF Scroll ★
   > PDR Scroll
   > MDR Scroll
   > GRD Scroll
   > HRG Scroll
   > MRG Scroll
   > EXR Scroll
   > MCR Scroll
  ~ 8 miscellaneous items:
   > Advanced Salvage Kit
   > Golden Tablet Piece (Left)
   > Golden Tablet Piece (Right)
   > Golden Tablet
   > Tellurium Pickaxe
   > Old Key
   > Andrew's Ancient Crystal of The Trail's Amazing History
   > [REDACTED TROPHY]
 - Added 63 new equipment items:
  ~ 11 weapons:
   > Unstoppable Force
   > Steel Greatsword
   > Draconic Wand
   > Void Crystal Staff
   > Knuckle Spikes
   > Life Crystal Staff
   > Mana Crystal Staff
   > Hero Sword Replica
   > Tellurium Wand
   > Harmony
   > Bloodlust ★★
  ~ 8 bodygear:
   > True Shadowplate Armor
   > True Phantasmal Robes
   > True Prayer Vestments
   > True Shadowspec Leathers
   > Tellurium Heavy Armor
   > Tellurium Robes
   > Tellurium Vestments
   > Tellurium Leathers
  ~ 4 headgear:
   > Dapper-Looking Hat
   > Bunny Hood
   > Dragon Scale Helmet
   > Sorrowful Headpiece
  ~ 6 footgear:
   > Hiking Boots ★★
   > Flower Boots
   > Padded Boots
   > Snow Boots
   > Trailblazing Boots
   > Trailblazing Boots ★
  ~ 7 shields:
   > Immovable Object
   > Vishnu's Shield
   > Turtle Shield
   > Tellurian Knight's Shield
   > Tellurian Knight's Bulwark
   > Vishnu's Aegis
   > Glacial Bulwark
  ~ 15 accessories:
   > Champion's Talisman
   > Vigilante's Charm
   > Phoenix Bracelet
   > Broken Phoenix Bracelet
   > Storm Lens
   > Giant Turtle Shell
   > Flytrap Fang
   > Flytrap Eye
   > Battle Plan
   > Scaly Gloves
   > Dragonforce Gauntlets
   > Warm Scarf
   > Snow Jacket
   > Snow Globe
   > Cloth Mask
  ~ 7 magic equips:
   > Comet Charm
   > Magic Coin
   > Elemental Lace
   > Conjurer's Harp
   > Orb of Wrath
   > Orb of Protection
   > Wyvern's Fury (Tome)
  ~ 1 power:
   > [REDACTED]
  ~ 5 vanities:
   > Bandito Outfit
   > Cavalier Outfit
   > Sorcerer Outfit
   > Bishop Outfit
   > Scapegrace Outfit
 - Added 21 new enemies:
  ~ Darkhound