@@ -4147,5 +4147,32 @@
       0
     ],
     "price": 0
+  },
+  {
+    "id": 158,
+    "atypeId": 1,
+    "description": "A curious slingshot found in the Lost Forest.\nIncreases damage dealt to bats by 80%.",
+    "etypeId": 6,
+    "traits": [
+      {
+        "code": 31,
+        "dataId": 12,
+        "value": 1
+      }
+    ],
+    "iconIndex": 158,
+    "name": "Bat Sling",
+    "note": "",
+    "params": [
+      0,
+      0,
+      3,
+      0,
+      0,
+      0,
+      0,
+      0
+    ],
+    "price": 50
   }
 ]
