@@ -2273,6 +2273,11 @@
         "code": 11,
         "dataId": 6,
         "value": 0.5
+      },
+      {
+        "code": 11,
+        "dataId": 12,
+        "value": 1.8
       }
     ],
     "gold": 30,
@@ -4559,11 +4564,16 @@
         "code": 11,
         "dataId": 6,
         "value": 0.5
+      },
+      {
+        "code": 11,
+        "dataId": 12,
+        "value": 1.8
       }
     ],
     "gold": 100,
     "name": "Feral Bat",
-    "note": "<Sideview Battler: Bat_1>\n<Attack Animation: 211>\n<Element Absorb: 7>\n\n<AI Priority>\nState !== Eye of the Storm +++ Random 40%: Cyclone\n</AI Priority>\n\n<Enemy Drops>\nStorm Lens: 1%\nShard of Glass: 0.5%\nEnchanted Bat Skin: 5%\nWind Essence: 20%\n</Enemy Drops>",
+    "note": "<Sideview Battler: Bat_1>\n<Attack Animation: 211>\n<Element Absorb: 7>\n\n<AI Priority>\nState !== Eye of the Storm +++ Random 40%: Cyclone\n</AI Priority>\n\n<Enemy Drops>\nStorm Lens: 1%\nBat Sling: 0.5%\nShard of Glass: 0.5%\nEnchanted Bat Skin: 5%\nWind Essence: 20%\n</Enemy Drops>",
     "params": [
       1000,
       0,
