@@ -119,7 +119,8 @@
     "\\i[102]Light",
     "\\i[103]Dark",
     "\\i[201]Leek",
-    "\\i[122]Healing"
+    "\\i[122]Healing",
+    "Bat Damage"
   ],
   "equipTypes": [
     "",
