@@ -83,7 +83,7 @@ Additions:
    > Old Key
    > Andrew's Ancient Crystal of The Trail's Amazing History
    > [REDACTED TROPHY]
- - Added 63 new equipment items:
+ - Added 64 new equipment items:
   ~ 11 weapons:
    > Unstoppable Force
    > Steel Greatsword
@@ -125,12 +125,13 @@ Additions:
    > Tellurian Knight's Bulwark
    > Vishnu's Aegis
    > Glacial Bulwark
-  ~ 15 accessories:
+  ~ 16 accessories:
    > Champion's Talisman
    > Vigilante's Charm
    > Phoenix Bracelet
    > Broken Phoenix Bracelet
    > Storm Lens
+   > Bat Sling
    > Giant Turtle Shell
    > Flytrap Fang
    > Flytrap Eye
